dhall/tests/type-inference/failure/recordOfKind.txt
Type error: error: InvalidFieldType
 --> <current file>:1:0
  |
1 | { a = Kind }
  | ^^^^^^^^^^^^ InvalidFieldType
  |
